base/api/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
spec:
  replicas: 2
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      run: api
  template:
    metadata:
      labels:
        run: api
    spec:
      containers:
        - name: api
          image: adomate/api:latest
          ports:
            - containerPort: 3000
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /ping
              port: 3000
              scheme: HTTP
            initialDelaySeconds: 10
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: /ping
              port: 3000
              scheme: HTTP
            initialDelaySeconds: 10
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          imagePullPolicy: Always
          resources:
            requests:
              cpu: 200m #200 millicpu AKA 0.2vCPU
              memory: 50Mi
            limits:
              cpu: 1000m #1000 millicpu AKA 1vCPU
              memory: 512Mi
      imagePullSecrets:
        - name: dockerhub-credentials
