base/api/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-ingress
  labels:
    app: api
spec:
  ingressClassName: nginx
  rules:
    - host: api.adomate.ai
      http:
        paths:
          - backend:
              service:
                name: api-service
                port:
                  number: 3000
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - api.adomate.ai
      secretName: api-adomate-ai-tls
